Fixed links not working due to z-index

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   background-color: #f5f5f5;
   background: linear-gradient(109.8deg, #f5f5f5 0%, #e0e0e0 100%);
   position: relative;
-  z-index: -1000;
+  z-index: 100;
 }
 
 .instagram-handle-container {
